메시지, 국제화 기능 테스트

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,2 +1,4 @@
-hello=??
-hello.name=?? {0} # ????? ?? ? ??!
+hello=\uC548\uB155
+
+# \uD30C\uB77C\uBBF8\uD130\uB3C4 \uB123\uC744 \uC218 \uC788\uC74C
+hello.name=\uC548\uB155 {0}
