--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,3 +2,17 @@ hello=\uC548\uB155
 
 # \uD30C\uB77C\uBBF8\uD130\uB3C4 \uB123\uC744 \uC218 \uC788\uC74C
 hello.name=\uC548\uB155 {0}
+
+label.item=\uC0C1\uD488
+label.item.id=\uC0C1\uD488 ID
+label.item.itemName=\uC0C1\uD488\uBA85
+label.item.price=\uAC00\uACA9
+label.item.quantity=\uC218\uB7C9
+
+page.items=\uC0C1\uD488 \uBAA9\uB85D
+page.item=\uC0C1\uD488 \uC0C1\uC138
+page.addItem=\uC0C1\uD488 \uB4F1\uB85D
+page.updateItem=\uC0C1\uD488 \uC218\uC815
+
+button.save=\uC800\uC7A5
+button.cancel=\uCDE8\uC18C
